--- a/css/responsive_style.css
+++ b/css/responsive_style.css
@@ -1,8 +1,28 @@
-@media screen and (max-width: 1440px) {
-    #transring {
+@media screen and (max-width: 1722px) {
+    /* #transring {
         transform: translate(-120%, -90%);
         height: 30%;
+    } */
+    #page1>img:nth-child(1),#page2>img:nth-child(1),#page3>img:nth-child(1){
+        margin-right: -5rem;
     }
+    .pages>img{
+        scale: 0.8 !important;
+    }
+}
+@media screen and (max-width: 1577px) {
+    #page5>img:first-child{
+        margin-left: -2rem;
+    }
+    #page6>img:first-child{
+        /* transform: translate(-195px, -32px) scale(1, 1); */
+    }
+}
+@media screen and (max-width: 1440px) {
+    /* #transring {
+        transform: translate(-120%, -90%);
+        height: 30%;
+    } */
     .pages>img{
         scale: 0.7 !important;
     }
