--- a/css/responsive_style.css
+++ b/css/responsive_style.css
@@ -1,3 +1,4 @@
+
 @media screen and (max-width: 1722px) {
     /* page images in animation */
   
@@ -14,6 +15,9 @@
   }
   #page5 > img:nth-child(1) {
     left: 10% !important;
+  }
+  #page5 > img:nth-child(2) {
+    top:-3%
   }
   #page5 > img:nth-child(4) {
     bottom: -8% !important;
@@ -50,7 +54,7 @@
     left: 1% !important;
 }
 #page5 > img:nth-child(2) {
-    top: -4%;
+    top: -1%;
 }
 #page5 > img:nth-child(3) {
     right: -6% !important;
